src/components/Button/Button.module.css
/* ... */
.button__text {
  display: flex;
  gap: calc(var(--eds-spacing-size-half) * 1px);
  align-items: center;
  justify-content: center;

  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  width: 100%;

  .button--sm & {
    /* Offset to better align text in small button */
    transform: translateY(-1px);
    gap: calc(var(--eds-spacing-size-half) * 1px);
  }

  .button--md &,
  .button--lg & {
    gap: calc(var(--eds-spacing-size-1) * 1px);
  }

  & svg {
    flex-shrink: 0;
  }
}

.button__text.button--is-loading {
  visibility: hidden;
}

.button__loader {
  position: absolute;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;

  display: flex;
  justify-content: center;
  align-items: center;
}

/**
 * Sizes and Widths
 */
.button--lg {
  align-items: center;
  padding: calc(var(--eds-spacing-size-1) * 1px) calc(var(--eds-spacing-size-2-and-half) * 1px);
}

.button--md {
  align-items: center;
  padding: calc(var(--eds-spacing-size-half) * 1px) calc(var(--eds-spacing-size-2) * 1px);
}

.button--sm {
  padding: calc(var(--eds-spacing-size-half) * 1px) calc(var(--eds-spacing-size-1-and-half) * 1px);
}

.button--size-lg {
  min-width: calc(var(--eds-spacing-size-9) * 1px);
  max-width: calc(var(--eds-spacing-size-40) * 1px);
  min-height: calc(var(--eds-spacing-size-5) * 1px);
  max-height: calc(var(--eds-spacing-size-5) * 1px);
}

.button--size-md {
  min-width: calc(var(--eds-spacing-size-8) * 1px);
  max-width: calc(var(--eds-spacing-size-32) * 1px);
  min-height: calc(var(--eds-spacing-size-4) * 1px);
  max-height: calc(var(--eds-spacing-size-4) * 1px);
}

.button--size-sm {
  min-width: calc(var(--eds-spacing-size-6) * 1px);
  max-width: calc(var(--eds-spacing-size-24) * 1px);
  min-height: calc(var(--eds-spacing-size-3) * 1px);
  max-height: calc(var(--eds-spacing-size-3) * 1px);
}

.button--full-width {
  width: 100%;
}

/**
 * Anatomy and iconLayout (w/ size)
 * lg=40, md=32, sm=24 when layout is icon-only
 */
.button--layout-icon-only {
  min-width: unset;
}

/* There's less padding on the side of the icon at different button sizes */
.button--lg.button--layout-left {
  padding-left: calc(var(--eds-spacing-size-2) * 1px);
}

.button--lg.button--layout-right {
  padding-right: calc(var(--eds-spacing-size-2) * 1px);
}

.button--lg.button--layout-icon-only {
  padding: calc(var(--eds-spacing-size-1) * 1px);
  width: calc(var(--eds-spacing-size-5) * 1px);
  min-width: calc(var(--eds-spacing-size-5) * 1px);
}

.button--md.button--layout-right {
  padding-right: calc(var(--eds-spacing-size-1-and-half) * 1px);
}

.button--md.button--layout-left {
  padding-left: calc(var(--eds-spacing-size-1-and-half) * 1px);
}

.button--md.button--layout-icon-only {
  padding: calc(var(--eds-spacing-size-1) * 1px);
  width: calc(var(--eds-spacing-size-4) * 1px);
  min-width: calc(var(--eds-spacing-size-4) * 1px);
}

.button--sm.button--layout-right {
  padding-right: calc(var(--eds-spacing-size-1) * 1px);
}

.button--sm.button--layout-left {
  padding-left: calc(var(--eds-spacing-size-1) * 1px);
}

.button--sm.button--layout-icon-only {
  padding: calc(var(--eds-spacing-size-half) * 1px);
  width: calc(var(--eds-spacing-size-3) * 1px);
  min-width: calc(var(--eds-spacing-size-3) * 1px);
}

.button:focus-visible {
  outline: none;
  box-shadow: 0 0 0 calc(var(--eds-spacing-size-quarter) * 1px) light-dark(var(--eds-theme-color-background-utility-base-2), var(--eds-dark-theme-color-background-utility-base-2)), 0 0 0 calc(var(--eds-spacing-size-half) * 1px) light-dark(var(--eds-theme-color-border-utility-focus), var(--eds-dark-theme-color-border-utility-focus));
}

/* stylelint-disable-next-line eds/no-tier-1-color-variable */
.button.button--variant-inverse:focus-visible {
  outline: none;
  box-shadow: 0 0 0 calc(var(--eds-spacing-size-quarter) * 1px) rgb(var(--eds-color-black) / 1), 0 0 0 calc(var(--eds-spacing-size-half) * 1px) light-dark(var(--eds-theme-color-background-utility-base-2), var(--eds-dark-theme-color-background-utility-base-2));
}

/**
 * Rank & Emphasis
 */
.button--primary.button--variant-default {
  color: light-dark(var(--eds-theme-color-text-utility-inverse), var(--eds-dark-theme-color-text-utility-inverse));
  background-color: light-dark(var(--eds-theme-color-background-utility-interactive-high-emphasis), var(--eds-dark-theme-color-background-utility-interactive-high-emphasis));
  border-color: light-dark(var(--eds-theme-color-background-utility-interactive-high-emphasis), var(--eds-dark-theme-color-background-utility-interactive-high-emphasis));
}

.button--secondary.button--variant-default {
  color: light-dark(var(--eds-theme-color-background-utility-interactive-high-emphasis), var(--eds-dark-theme-color-background-utility-interactive-high-emphasis));
  border-color: light-dark(var(--eds-theme-color-border-utility-interactive), var(--eds-dark-theme-color-border-utility-interactive));
  background-color: light-dark(var(--eds-theme-color-background-utility-interactive-no-emphasis), var(--eds-dark-theme-color-background-utility-interactive-no-emphasis));
}

.button--tertiary.button--variant-default {
  color: light-dark(var(--eds-theme-color-background-utility-interactive-high-emphasis), var(--eds-dark-theme-color-background-utility-interactive-high-emphasis));
  border-color: light-dark(var(--eds-theme-color-background-utility-interactive-no-emphasis), var(--eds-dark-theme-color-background-utility-interactive-no-emphasis));
  background-color: light-dark(var(--eds-theme-color-background-utility-interactive-no-emphasis), var(--eds-dark-theme-color-background-utility-interactive-no-emphasis));
}

.button--tertiary.button--context-standalone {
  color: light-dark(var(--eds-theme-color-text-utility-interactive-secondary), var(--eds-dark-theme-color-text-utility-interactive-secondary));
}
/* ... */

